@@ -8,6 +8,7 @@ ndim-utils 0.6.x
   * watch-xsel: Add --append=FILE argument.
   * watch-xsel: Add --max-lines=NO argument.
   * watch-xsel: Add --verbose argument.
+  * watch-xsel: Add --xsel-timeout=MS argument.
 
 ndim-utils 0.6
   * Migrate to newer build-helpers/
